# Pagtutuklas-Server

./: README.md  Setup.hs  Snap-Refactor.cabal  Snap-Refactor.hackage  b  b.pl  try.pl
resources/: index.html
resources/templates/: index.tpl
src/: AppActions.hs  Application.hs  BaseUrl.hs  BuildInfo.hs  Disco.hs  GetRepoRoot.hs  RpxMe.hs  Test1  Test1.hs  Version.hs
src/BaseUrl/: Application.hs  Site.hs
src/Config/: BeanstalkConfig.hs  CacheConfig.hs  ConfigClass.hs  DBConfig.hs  HostPort.hs  Level.hs  LogConfig.hs  MailConfig.hs  MinConfig.hs  Options.hs  ProxyConfig.hs  README  RPXConfig.hs  ResolverConfig.hs
src/Config/BaseUrl/: BaseUrlConfig.hs  README
src/Config/Disco/: DiscoConfig.hs
src/Config/RpxMe/: README  RpxMeConfig.hs
src/Control/Monad/: Trace.hs
src/Control/Monad/Error/: Log.hs
src/Database/: Database.hs
src/Database/HDBC/: ConnectionPool.hs
src/Disco/: Application.hs  Site.hs
src/Discover/: Discover.hs  HTML.hs  HostMeta.hs  URITemplate.hs  WhiteSpace.hs  XRDS.hs
src/Fetcher/: Common.hs  Curl.hs  Errors.hs  Fetcher.hs  HTTP.hs  Memoize.hs  Monad.hs  Request.hs  Response.hs  Util.hs
src/Handler/BaseUrl/: Args.hs  BaseUrl.hs  BaseUrlOld.hs
src/Handler/Disco/: Args.hs  Discovery.hs  JSONSerialization.hs  MX.hs  SquidFetcher.hs
src/Handler/RpxMe/: Args.hs  RpxMe.hs
src/Network/Beanstalk/: Ext.hs  Pool.hs
src/RelyingParty/: DomainPattern.hs  Field.hs  RelyingParty.hs  UrlRef.hs  Util.hs
src/RpxMe/: Application.hs  Site.hs
src/Snap/Extension/Timer/: Impl.hs
src/State/: BeanstalkState.hs  CacheState.hs  DBState.hs  HandlerState.hs  MinState.hs  ProxyState.hs  README  RPXState.hs  ResolverState.hs
src/State/BaseUrl/: BaseUrlState.hs  README
src/State/Disco/: DiscoState.hs
src/State/RpxMe/: README  RpxMeState.hs
