Name:                Snap-Refactor
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable Disco
  hs-source-dirs: src
  main-is: Disco.hs
  GHC-Options: -Wall -Werror -threaded -fno-warn-unused-do-bind
  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    containers == 0.3.0.0,
    Cabal == 1.8.*,
    curl == 1.3.5,
    directory == 1.0.*,
    filepath == 1.1.0.*,
    HDBC == 2.2.6.1,
    HDBC-postgresql == 2.2.3.3,
    heist >= 0.5 && < 0.6,
    hsdns == 1.4,
    HTTP == 4000.0.8,
    json == 0.4.*,
    JSONb >= 1.0.2 && < 1.1,
    lrucache == 1.1,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    MonadRandom == 0.1.6,
    mtl >= 2 && < 3,
    network == 2.3,
    parsec == 3.1.1,
    pretty == 1.0.1.1,
    openid-refactor == 1.0.0,
    snap == 0.4.1,
    snap-core == 0.4.1,
    snap-server == 0.4.1,
    template-haskell >= 2.3 && < 2.6,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.3,
    unix == 2.4.0.2,
    url == 2.1.2,
    xml-basic == 0.1.1.1,
    xmlhtml == 0.1.*

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: hint >= 0.3.2 && < 0.4
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

Executable BaseUrl
  hs-source-dirs: src
  main-is: BaseUrl.hs
  GHC-Options: -Wall -Werror -threaded -fno-warn-unused-do-bind
  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    Cabal == 1.8.*,
    containers == 0.3.0.0,
    directory == 1.0.*,
    filepath == 1.1.0.*,
    HDBC == 2.2.6.1,
    HDBC-postgresql == 2.2.3.3,
    heist >= 0.5 && < 0.6,
    HTTP == 4000.0.8,
    json == 0.4.*,
    JSONb >= 1.0.2 && < 1.1,
    lrucache == 1.1,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    network == 2.3,
    snap == 0.4.1,
    snap-core == 0.4.1,
    snap-server == 0.4.1,
    tagchup == 0.4.*,
    template-haskell >= 2.3 && < 2.6,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.3,
    unix == 2.4.0.2,
    url == 2.1.2,
    urlencoded == 0.3.0.1,
    xmlhtml == 0.1.*

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: hint >= 0.3.2 && < 0.4
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

Executable RpxMe
  hs-source-dirs: src
  main-is: RpxMe.hs
  GHC-Options: -Wall -Werror -threaded -fno-warn-unused-do-bind
  Build-depends:
    attoparsec == 0.8.5.3,
    base >= 4 && < 5,
    blaze-builder == 0.2.1.4,
    bytestring >= 0.9.1 && < 0.10,
    Cabal == 1.8.*,
    containers == 0.3.0.0,
    dlist == 0.5,
    directory == 1.0.*,
    filepath == 1.1.0.*,
    HDBC == 2.2.6.1,
    HDBC-postgresql == 2.2.3.3,
    heist >= 0.5 && < 0.6,
    HTTP == 4000.0.8,
    JSONb >= 1.0.2 && < 1.1,
    lrucache == 1.1,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    network == 2.3,
    old-locale == 1.0.0.2,
    SMTPClient == 1.0.1,
    snap == 0.4.1,
    snap-core == 0.4.1,
    snap-server == 0.4.1,
    template-haskell >= 2.3 && < 2.6,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.3,
    url == 2.1.2,
    utf8-string == 0.3.6,
    xmlhtml == 0.1.*

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: hint >= 0.3.2 && < 0.4
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
